--- a/src/index.html
+++ b/src/index.html
@@ -95,6 +95,7 @@
   <script src="js/local_storage_manager.js"></script>
   <script src="js/game_manager.js"></script>
   <script src="js/Brainwave.js"></script>
+  <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
   <script src="js/application.js"></script>
 </body>
 </html>
