--- a/src/index.html
+++ b/src/index.html
@@ -97,5 +97,7 @@
   <script src="js/Brainwave.js"></script>
   <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
   <script src="js/application.js"></script>
+  <script src="http://localhost:3000/socket.io/socket.io.js"></script>
+  <script src="js/stats.js"></script>
 </body>
 </html>
