--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
   <script src="js/tile.js"></script>
   <script src="js/local_storage_manager.js"></script>
   <script src="js/game_manager.js"></script>
-  <script src="js/Brainwave.js"></script>
+  <script src="js/rl.js"></script>
   <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
   <script src="js/application.js"></script>
   <script src="js/stats.js"></script>
